fix menu overlap

--- a/css/site.css
+++ b/css/site.css
@@ -34,6 +34,7 @@
     }
 }
 
-.navbar-static-top.navbar {
+.navbar.navbar-static-top {
     margin-bottom: 0;
+    z-index: auto;
 }
